environments/gloo-edge/httpbin-bookinfo/httpbin-config/base/httpbin-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'httpbin.glootest.com'
    options:
      jwt:
        providers:
          dev-example:
            tokenSource:
              headers:
              - header: x-token
              queryParams:
              - token
            claimsToHeaders:
            - claim: group
              header: x-group
            issuer: https://dev.example.com
            jwks:
              local:
                key: |
                  -----BEGIN PUBLIC KEY-----
                  MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEArER4FGhBW0h05DnVSHre
[...]
                  uwIDAQAB
                  -----END PUBLIC KEY-----
      rateLimitConfigs:
        refs:
        - name: claim-based-rl
          namespace: gloo-system
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system
